--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -490,6 +490,9 @@ video {
 .m-4 {
   margin: 1rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .inline-block {
   display: inline-block;
 }
@@ -508,20 +511,26 @@ video {
 .w-full {
   width: 100%;
 }
-.max-w-prose {
-  max-width: 65ch;
-}
 .max-w-md {
   max-width: 28rem;
 }
+.max-w-prose {
+  max-width: 65ch;
+}
 .flex-grow {
   flex-grow: 1;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .grid-flow-row {
   grid-auto-flow: row;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -531,6 +540,9 @@ video {
 }
 .items-baseline {
   align-items: baseline;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
@@ -574,6 +586,9 @@ video {
 .rounded {
   border-radius: 0.25rem;
 }
+.border {
+  border-width: 1px;
+}
 .bg-neutral-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 250 / var(--tw-bg-opacity));
@@ -584,6 +599,17 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.text-center {
+  text-align: center;
 }
 .text-right {
   text-align: right;
@@ -648,8 +674,16 @@ video {
 }
 @media (min-width: 768px) {
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:gap-4 {
     gap: 1rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
   }
 
   .md\:p-8 {
@@ -657,6 +691,10 @@ video {
   }
 }
 @media (min-width: 1024px) {
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 
   .lg\:gap-6 {
     gap: 1.5rem;
